# evalgate-ai

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  evalgate-release-gate.yml
api/: __init__.py  main.py  schemas.py
docs/: ci-release-gate.md  demo.md  fixtures-and-policies.md  overview.md  pilot-onboarding.md  report-contract.md  roadmap.md  service-adapters.md
docs/examples/: evalgate-release-gate.yml
docs/examples/evalgate-pack/fixtures/: eval_cases.json
docs/examples/evalgate-pack/policy/: profiles.json
docs/examples/evalgate-pack/services/: releases.json
evalgate/: cli.py  config.py  errors.py  orchestration.py  report_summary.py  report_triage.py  report_validation.py  validation.py
evaluator/: __init__.py  fixtures.py  models.py  runner.py
fixtures/: eval_cases.json
policy/: __init__.py  engine.py  models.py  profiles.json  profiles.py
reporting/: __init__.py  store.py
services/: __init__.py  adapters.py  apps.py  registry.py  releases.json
tests/: test_health.py
